# feedBack-desktop

./: .build-config.json  CMakeLists.txt  package.json
.devcontainer/: Dockerfile
.github/workflows/: build.yml  nightly.yml  rc.yml  release.yml  ship-ci.yml
docs/: CAPABILITY-MIGRATION.md  audio-ownership-plan.md  streamer-mix-outputs.md
scripts/: BUILD_SCRIPTS.md  build-common.sh  build-linux-docker.sh  bundle-binaries.sh  bundle-slopsmith.sh  bundled-plugins.txt  plugin-manifest.sh  update-bundled-plugins.sh
src/audio/: AudioEngine.cpp  AudioEngine.h  BackingLeveler.h  CMakeLists.txt  MlNoteDetector.cpp  MlNoteDetector.h  NAMProcessor.cpp  NodeAddon.cpp  SignalChain.cpp  SignalChain.h  SourceChain.cpp  SourceChain.h  VSTHost.cpp  VSTTrace.h
src/audio/Sandbox/: AudioChannel_shared.cpp  CrashAttribution.cpp  CrashAttribution.h  SandboxFactory_shared.cpp  SandboxedProcessor.cpp  SandboxedProcessor.h
src/audio/addon/: AddonContext.cpp  AddonContext.h  Bindings.h  ChainBindings.cpp  ChainOps.cpp  ChainOps.h  ControlBindings.cpp  DeviceBindings.cpp  EditorWindows.cpp  EditorWindows.h  LifecycleExecutor.cpp  LifecycleExecutor.h  PluginModulePin.h
src/audio/engine/: DeviceSetup.cpp  Mixer.h  RateMatch.h  RendererBus.h
src/main/: app-menu.ts  audio-bridge.ts  audio-effects-executor.ts  ipc-channels.ts  lease-bridge.ts  lease-registry.ts  library-path-config.ts  linux-update-decision.ts  main.ts  mixer-bridge.ts  pane-hosts.ts  pane-tray.ts  plugin-manager.ts  preload.ts  python.ts  splash.html  update-manager.ts  vst-crash-guard.ts  window-bounds.ts
src/renderer/: screen.html  screen.js  settings.html
src/renderer/plugin-manager/: screen.js
src/vst-host/: CMakeLists.txt  main.cpp
tests/: _load-ts.js  audio-effects-executor.test.js  device-setup-lifecycle.test.js  lease-bridge.test.js  lease-registry.test.js  library-path-config.test.js  linux-update-decision.test.js  mixer-bridge.test.js
tests/contracts/: addon-exports.json  ipc-channels.json  preload-audio-api.json
tests/engine_units/: CMakeLists.txt  mixer_test.cpp  rate_match_test.cpp  renderer_bus_test.cpp
tests/mlnotedetector/: test.cpp
tests/sandbox/e2e/: CMakeLists.txt  e2e_test.cpp  signalchain_postgain_test.cpp
